--- a/lib/obs-overlay.css
+++ b/lib/obs-overlay.css
@@ -15,12 +15,20 @@ body:not([loaded]) {
                 
 input {
     display: inline-block;
-    width: 40px;
     margin: 0 2px;
     border: none;
     background: transparent;
     padding: 4px;
     color: white;
+}
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+}
+
+input[type="number"] {
+    width: 35px;
     font-size: 22px;
     text-align: center;
     letter-spacing: 2px;
