--- a/lib/obs-overlay.css
+++ b/lib/obs-overlay.css
@@ -7,19 +7,29 @@ body {
     align-items: center;
     justify-content: center;
     font-size: 22px;
+    overflow: hidden;
+    margin: 4px 0;
+    user-select: none;
 }
 
 body:not([loaded]) {
     visibility: hidden;
 }
-                
+
 input {
+    user-select: text;
     display: inline-block;
-    margin: 0 2px;
+    margin: 0 5px 0 0;
     border: none;
-    background: transparent;
-    padding: 4px;
+    background: #1c1c1c;
+    border-radius: 4px;
+    padding: 6px 8px;
     color: white;
+    outline: none;
+}
+                
+input:focus {
+    background: #141414;
 }
 
 input[type=number]::-webkit-inner-spin-button, 
@@ -28,8 +38,8 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 input[type="number"] {
-    width: 35px;
-    font-size: 22px;
+    width: 25px;
+    font-size: 16px;
     text-align: center;
     letter-spacing: 2px;
 }
